--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -1,6 +1,7 @@
 @import "./partials/setup";
 @import "./partials/variables";
 @import "./partials/baseStyles";
+@import "./partials/typography";
 @import "./partials/sections";
 @import "./partials/carousel";
 @import "./partials/contactPage";
