--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -1,50 +1,91 @@
-.blog nav {
-  background-color: $quinary;
-  max-width: 100%;
-}
-
-.blog ul {
+// New Nav
+nav.topNav {
+  background-color: #b9dde7;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+}
+nav.topNav li {
+  list-style: none;
+}
+nav.topNav .navBar .desktopNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  justify-content: center;
   align-items: center;
-  color: $primary;
-  margin: 0 150px;
-  padding: 0;
 }
-.blog li {
-  list-style-type: none;
+nav.topNav .navBar .desktopNav ul {
+  display: flex;
 }
-
-.blog li:nth-child(3) a {
-  font-size: 42px;
+nav.topNav .navBar .desktopNav ul li {
+  padding: 0 20px;
+}
+nav.topNav .navBar .desktopNav ul li a {
+  line-height: 1.45rem;
+}
+nav.topNav .navBar .desktopNav ul li:nth-child(3) a {
+  font-size: 2.1rem;
   margin: 10px 30px;
 }
-.blog li a {
-  color: $primary;
-  font-family: $headingFont;
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-  margin: 0 20px;
-  cursor: pointer;
-}
-.blog li a:hover,
-.blog li a:focus {
-  color: white;
-  text-decoration: $quaternary underline;
-}
-.blog .image {
-  position: relative;
-}
-.blog img {
-  max-width: 100%;
-  margin: 20px 0;
+nav.topNav .navBar .desktopNav h1 {
+  padding: 10px 25px;
 }
 
-.blog {
+/* Mobile Navigation*/
+
+.mobileNav {
+  display: none;
+}
+
+nav.topNav .navBar {
+  width: 100%;
+}
+nav.topNav .navBar .mobileNav h1 {
+  font-size: clamp(2rem, 12vw, 3rem);
+  position: absolute;
+  z-index: 10;
+  top: 28px;
+  left: 35px;
+  color: #f6f6f6;
+}
+nav.topNav .navBar .mobileNav ul {
+  background: #e3e4eacc;
+  position: fixed;
+  z-index: 20;
+  width: 100%;
+  top: 100px;
+  transition: all 0.5s;
+  height: 0;
+  overflow: hidden;
+}
+nav.topNav .navBar .mobileNav ul a {
+  display: inline-block;
+  color: #171717;
+  font-size: 40px;
+  width: 100%;
+  padding: 20px 40px;
+  -webkit-transition: background 0.7s, color 0.3s;
+  transition: background 0.7s, color 0.3s;
+}
+nav.topNav .navBar .mobileNav ul a:hover,
+nav.topNav .navBar .mobileNav ul a:focus {
+  color: #f6f6f6;
+  background: #f38d8dab;
+  opacity: 0.9;
+}
+
+.image {
   position: relative;
 }
-.blog h1 {
+.image img {
+  width: 100%;
+  margin: 0;
+}
+
+.image h1 {
   font-size: 80px;
   font-family: $headingFont;
   font-weight: bold;
@@ -53,11 +94,6 @@
   letter-spacing: 1px;
   left: 5%;
   bottom: -20%;
-}
-
-.blog img {
-  margin-top: 0;
-  width: 100%;
 }
 
 .blogPost .wrapper {
@@ -160,12 +196,9 @@
 .blogForm {
   display: flex;
   flex-direction: column;
-  //   margin-left: 50px;
   font-family: $bodyFont;
   font-size: 20px;
-  //   width: 100%;
   justify-content: space-evenly;
-  // width: calc(100% - 75px);
   width: 100%;
 }
 
@@ -205,5 +238,4 @@ button {
 
 .blogForm .formDetails {
   margin-top: 20px;
-  //   width: calc(100%-70px);
 }
